MGMT-3492 Move Image to its own resource
