# models/image.go
@@ -1,0 +1,278 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"encoding/json"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// Image image
+//
+// swagger:model image
+type Image struct {
+
+	// The cluster that this host is associated with.
+	// Format: uuid
+	ClusterID strfmt.UUID `json:"cluster_id,omitempty" gorm:"primary_key;foreignkey:Cluster"`
+
+	// created at
+	// Required: true
+	// Format: date-time
+	CreatedAt *strfmt.DateTime `json:"created_at" gorm:"type:timestamp with time zone"`
+
+	// discovery overrides
+	DiscoveryOverrides string `json:"discovery_overrides,omitempty"`
+
+	// download url
+	DownloadURL string `json:"download_url,omitempty"`
+
+	// expires at
+	// Required: true
+	// Format: date-time
+	ExpiresAt *strfmt.DateTime `json:"expires_at" gorm:"type:timestamp with time zone"`
+
+	// href
+	Href string `json:"href,omitempty"`
+
+	// Unique identifier of the object.
+	// Required: true
+	// Format: uuid
+	ID *strfmt.UUID `json:"id" gorm:"primary_key"`
+
+	// kind
+	// Enum: [Image]
+	Kind string `json:"kind,omitempty"`
+
+	// name
+	Name string `json:"name,omitempty"`
+
+	// size bytes
+	// Minimum: 0
+	SizeBytes *int64 `json:"size_bytes,omitempty"`
+
+	// SSH public key for debugging the installation.
+	SSHPublicKey string `json:"ssh_public_key,omitempty"`
+
+	// state
+	// Required: true
+	// Enum: [creating ready expired]
+	State *string `json:"state"`
+
+	// statip ips configuration string in the format expected by discovery ignition
+	StaticIpsConfig string `json:"static_ips_config,omitempty"`
+}
+
+// Validate validates this image
+func (m *Image) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateClusterID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateCreatedAt(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateExpiresAt(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateKind(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateSizeBytes(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateState(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *Image) validateClusterID(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.ClusterID) { // not required
+		return nil
+	}
+
+	if err := validate.FormatOf("cluster_id", "body", "uuid", m.ClusterID.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Image) validateCreatedAt(formats strfmt.Registry) error {
+
+	if err := validate.Required("created_at", "body", m.CreatedAt); err != nil {
+		return err
+	}
+
+	if err := validate.FormatOf("created_at", "body", "date-time", m.CreatedAt.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Image) validateExpiresAt(formats strfmt.Registry) error {
+
+	if err := validate.Required("expires_at", "body", m.ExpiresAt); err != nil {
+		return err
+	}
+
+	if err := validate.FormatOf("expires_at", "body", "date-time", m.ExpiresAt.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Image) validateID(formats strfmt.Registry) error {
+
+	if err := validate.Required("id", "body", m.ID); err != nil {
+		return err
+	}
+
+	if err := validate.FormatOf("id", "body", "uuid", m.ID.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+var imageTypeKindPropEnum []interface{}
+
+func init() {
+	var res []string
+	if err := json.Unmarshal([]byte(`["Image"]`), &res); err != nil {
+		panic(err)
+	}
+	for _, v := range res {
+		imageTypeKindPropEnum = append(imageTypeKindPropEnum, v)
+	}
+}
+
+const (
+
+	// ImageKindImage captures enum value "Image"
+	ImageKindImage string = "Image"
+)
+
+// prop value enum
+func (m *Image) validateKindEnum(path, location string, value string) error {
+	if err := validate.EnumCase(path, location, value, imageTypeKindPropEnum, true); err != nil {
+		return err
+	}
+	return nil
+}
+
+func (m *Image) validateKind(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.Kind) { // not required
+		return nil
+	}
+
+	// value enum
+	if err := m.validateKindEnum("kind", "body", m.Kind); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Image) validateSizeBytes(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.SizeBytes) { // not required
+		return nil
+	}
+
+	if err := validate.MinimumInt("size_bytes", "body", int64(*m.SizeBytes), 0, false); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+var imageTypeStatePropEnum []interface{}
+
+func init() {
+	var res []string
+	if err := json.Unmarshal([]byte(`["creating","ready","expired"]`), &res); err != nil {
+		panic(err)
+	}
+	for _, v := range res {
+		imageTypeStatePropEnum = append(imageTypeStatePropEnum, v)
+	}
+}
+
+const (
+
+	// ImageStateCreating captures enum value "creating"
+	ImageStateCreating string = "creating"
+
+	// ImageStateReady captures enum value "ready"
+	ImageStateReady string = "ready"
+
+	// ImageStateExpired captures enum value "expired"
+	ImageStateExpired string = "expired"
+)
+
+// prop value enum
+func (m *Image) validateStateEnum(path, location string, value string) error {
+	if err := validate.EnumCase(path, location, value, imageTypeStatePropEnum, true); err != nil {
+		return err
+	}
+	return nil
+}
+
+func (m *Image) validateState(formats strfmt.Registry) error {
+
+	if err := validate.Required("state", "body", m.State); err != nil {
+		return err
+	}
+
+	// value enum
+	if err := m.validateStateEnum("state", "body", *m.State); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Image) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Image) UnmarshalBinary(b []byte) error {
+	var res Image
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
