# restapi/operations/images/download_cluster_i_s_o_responses.go
@@ -1,6 +1,6 @@
 // Code generated by go-swagger; DO NOT EDIT.
 
-package installer
+package images
 
 // This file was generated by the swagger tool.
 // Editing this file might prove futile when you re-run the swagger generate command
@@ -232,74 +232,6 @@ func (o *DownloadClusterISONotFound) WriteResponse(rw http.ResponseWriter, produ
 	}
 }
 
-// DownloadClusterISOMethodNotAllowedCode is the HTTP code returned for type DownloadClusterISOMethodNotAllowed
-const DownloadClusterISOMethodNotAllowedCode int = 405
-
-/*DownloadClusterISOMethodNotAllowed Method Not Allowed.
-
-swagger:response downloadClusterISOMethodNotAllowed
-*/
-type DownloadClusterISOMethodNotAllowed struct {
-}
-
-// NewDownloadClusterISOMethodNotAllowed creates DownloadClusterISOMethodNotAllowed with default headers values
-func NewDownloadClusterISOMethodNotAllowed() *DownloadClusterISOMethodNotAllowed {
-
-	return &DownloadClusterISOMethodNotAllowed{}
-}
-
-// WriteResponse to the client
-func (o *DownloadClusterISOMethodNotAllowed) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
-
-	rw.WriteHeader(405)
-}
-
-// DownloadClusterISOConflictCode is the HTTP code returned for type DownloadClusterISOConflict
-const DownloadClusterISOConflictCode int = 409
-
-/*DownloadClusterISOConflict Error.
-
-swagger:response downloadClusterISOConflict
-*/
-type DownloadClusterISOConflict struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.Error `json:"body,omitempty"`
-}
-
-// NewDownloadClusterISOConflict creates DownloadClusterISOConflict with default headers values
-func NewDownloadClusterISOConflict() *DownloadClusterISOConflict {
-
-	return &DownloadClusterISOConflict{}
-}
-
-// WithPayload adds the payload to the download cluster i s o conflict response
-func (o *DownloadClusterISOConflict) WithPayload(payload *models.Error) *DownloadClusterISOConflict {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the download cluster i s o conflict response
-func (o *DownloadClusterISOConflict) SetPayload(payload *models.Error) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *DownloadClusterISOConflict) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(409)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
-
 // DownloadClusterISOInternalServerErrorCode is the HTTP code returned for type DownloadClusterISOInternalServerError
 const DownloadClusterISOInternalServerErrorCode int = 500
 
@@ -336,6 +268,50 @@ func (o *DownloadClusterISOInternalServerError) SetPayload(payload *models.Error
 func (o *DownloadClusterISOInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
 
 	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// DownloadClusterISOServiceUnavailableCode is the HTTP code returned for type DownloadClusterISOServiceUnavailable
+const DownloadClusterISOServiceUnavailableCode int = 503
+
+/*DownloadClusterISOServiceUnavailable Unavailable.
+
+swagger:response downloadClusterISOServiceUnavailable
+*/
+type DownloadClusterISOServiceUnavailable struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewDownloadClusterISOServiceUnavailable creates DownloadClusterISOServiceUnavailable with default headers values
+func NewDownloadClusterISOServiceUnavailable() *DownloadClusterISOServiceUnavailable {
+
+	return &DownloadClusterISOServiceUnavailable{}
+}
+
+// WithPayload adds the payload to the download cluster i s o service unavailable response
+func (o *DownloadClusterISOServiceUnavailable) WithPayload(payload *models.Error) *DownloadClusterISOServiceUnavailable {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the download cluster i s o service unavailable response
+func (o *DownloadClusterISOServiceUnavailable) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *DownloadClusterISOServiceUnavailable) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(503)
 	if o.Payload != nil {
 		payload := o.Payload
 		if err := producer.Produce(rw, payload); err != nil {
