# restapi/operations/images/generate_cluster_i_s_o_responses.go
@@ -1,6 +1,6 @@
 // Code generated by go-swagger; DO NOT EDIT.
 
-package installer
+package images
 
 // This file was generated by the swagger tool.
 // Editing this file might prove futile when you re-run the swagger generate command
@@ -25,7 +25,7 @@ type GenerateClusterISOCreated struct {
 	/*
 	  In: Body
 	*/
-	Payload *models.Cluster `json:"body,omitempty"`
+	Payload *models.Image `json:"body,omitempty"`
 }
 
 // NewGenerateClusterISOCreated creates GenerateClusterISOCreated with default headers values
@@ -35,13 +35,13 @@ func NewGenerateClusterISOCreated() *GenerateClusterISOCreated {
 }
 
 // WithPayload adds the payload to the generate cluster i s o created response
-func (o *GenerateClusterISOCreated) WithPayload(payload *models.Cluster) *GenerateClusterISOCreated {
+func (o *GenerateClusterISOCreated) WithPayload(payload *models.Image) *GenerateClusterISOCreated {
 	o.Payload = payload
 	return o
 }
 
 // SetPayload sets the payload to the generate cluster i s o created response
-func (o *GenerateClusterISOCreated) SetPayload(payload *models.Cluster) {
+func (o *GenerateClusterISOCreated) SetPayload(payload *models.Image) {
 	o.Payload = payload
 }
 
@@ -225,50 +225,6 @@ func (o *GenerateClusterISONotFound) SetPayload(payload *models.Error) {
 func (o *GenerateClusterISONotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
 
 	rw.WriteHeader(404)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
-
-// GenerateClusterISOMethodNotAllowedCode is the HTTP code returned for type GenerateClusterISOMethodNotAllowed
-const GenerateClusterISOMethodNotAllowedCode int = 405
-
-/*GenerateClusterISOMethodNotAllowed Method Not Allowed.
-
-swagger:response generateClusterISOMethodNotAllowed
-*/
-type GenerateClusterISOMethodNotAllowed struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.Error `json:"body,omitempty"`
-}
-
-// NewGenerateClusterISOMethodNotAllowed creates GenerateClusterISOMethodNotAllowed with default headers values
-func NewGenerateClusterISOMethodNotAllowed() *GenerateClusterISOMethodNotAllowed {
-
-	return &GenerateClusterISOMethodNotAllowed{}
-}
-
-// WithPayload adds the payload to the generate cluster i s o method not allowed response
-func (o *GenerateClusterISOMethodNotAllowed) WithPayload(payload *models.Error) *GenerateClusterISOMethodNotAllowed {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the generate cluster i s o method not allowed response
-func (o *GenerateClusterISOMethodNotAllowed) SetPayload(payload *models.Error) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *GenerateClusterISOMethodNotAllowed) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(405)
 	if o.Payload != nil {
 		payload := o.Payload
 		if err := producer.Produce(rw, payload); err != nil {
